2000-12-04  Rebecca Schulman  <rebecka@eazel.com>

	reviewed by: Pavel Cisler <pavel@eazel.com>

	* libgnomevfs/gnome-vfs-mime-magic.c: (gnome_vfs_mime_magic_parse):
	Fix a large leak in gnome-vfs mime, that resulted from not freeing
	a g_array segment during mime lookups

2000-12-03  Maciej Stachowiak  <mjs@eazel.com>

	reviewed by: Pavel Cisler <pavel@eazel.com>

	* libgnomevfs/gnome-vfs-utils.c
	(gnome_vfs_format_file_size_for_display): Changed factor for
	kilobytes to 1024 from 1000, megabytes to 1024*1024 from 1,000,000
	and gigabytes to 1024*1024*1024 from 1,000,000,000.

2000-11-29  Darin Adler  <darin@eazel.com>

	reviewed by: Mike Fleming <mfleming@eazel.com>

	* libgnomevfs/gnome-vfs-mime-magic.c:
	(gnome_vfs_mime_get_magic_table),
	(gnome_vfs_mime_clear_magic_table): Eliminate the unused "mmap"
	optimization. We haven't been generating the binary file for a
	while, and we've determined there's no real speed issue.

	* data/mime/gnome-vfs.applications: Use tabs consistently instead
	of some tabs and some spaces. Get rid of some extra whitespace on
	some lines. Fix some "can_open_uris" lines that said
	"can_open_urls" instead.
	
	* data/mime/gnome-vfs.keys: Use tabs consistently instead of some
	tabs and some spaces.

2000-11-29  Pavel Cisler  <pavel@eazel.com>

	* test/test-mime.c: (main):
	Oops, make it build.

2000-11-29  Rebecca Schulman  <rebecka@eazel.com>

	reviewed by: Pavel Cisler <pavel@eazel.com>

	* test/test-mime.c: (main):
	Added a --help argument that lists available arguments,
	and made the script understand both paths and uris,
	and report the case where a uri or path is not valid.

2000-11-29  Rebecca Schulman  <rebecka@eazel.com>

	* modules/file-method.c: (rename_helper):
	Fixed bug 1185, that removing a directory 
	always returns NOT_EMPTY on an error.

2000-11-22  Michael K. Fleming  <mfleming@eazel.com>

	* modules/http-method.c: (sig_gconf_value_changed):
	Fixed bug where setting "/system/gnome-vfs/use-http-proxy"